--- a/source/operations-for-large-resources.html
+++ b/source/operations-for-large-resources.html
@@ -21,7 +21,7 @@ information in the list and group without having to transmit
 the entire resource.
 </p>
 <p>
-These operations are still under development, so they cn be found in the <a href="https://build.fhir.org/ig/HL7/api-incubator/operations-for-large-resources.html">API Incubator</a>.
+These operations are still under development, so they are presently found in the <a href="https://build.fhir.org/ig/HL7/api-incubator/operations-for-large-resources.html">API Incubator</a>.
 </p>
   [%file newfooter%]
 
