--- a/source/clinicalreasoning-module.html
+++ b/source/clinicalreasoning-module.html
@@ -96,7 +96,7 @@ in order to support consistent definitions for schema and UML derived code.
 		<tr><td><a href="metadatatypes.html#ParameterDefinition.html">ParameterDefinition</a></td><td>Represents the definition of a parameter to logic.</td></tr>
 		<tr><td><a href="plandefinition.html">PlanDefinition</a></td><td>Represents the description of a plan for accomplishing a particular goal. This resource is used to represent a broad variety of clinical knowledge artifacts including decision support rules, order sets, and protocols.</td></tr>
 		<tr><td><a href="requestorchestration.html">RequestOrchestration</a></td><td>Represents a group of options for a particular subject that can be used to accomplish a particular goal. This resource is often, but not always, the result of applying a PlanDefinition to a particular patient.</td></tr>
-		<tr><td><a href="triggerDefinition.html">TriggerDefinition</a></td><td>Represents the definition of a triggering event. Used in EventDefinition and PlanDefinition to define the characteristics of an event.</td></tr>
+		<tr><td><a href="metadatatypes.html#TriggerDefinition">TriggerDefinition</a></td><td>Represents the definition of a triggering event. Used in EventDefinition and PlanDefinition to define the characteristics of an event.</td></tr>
 	</tbody>
 </table>
 
@@ -346,3 +346,4 @@ in order to support consistent definitions for schema and UML derived code.
 [%file newfooter%]
 </body>
 </html>
+
