--- a/source/dosage.html
+++ b/source/dosage.html
@@ -48,6 +48,34 @@ Dosage is used in the following places: [%dtusage Dosage%]
 </p>
 
 
+<a name="details"></a>
+<h2 style="margin-bottom: 1px">
+DosageDetails
+</h2>
+
+[%dt DosageDetails 2%]
+
+
+<div class="use">
+<p><b>Constraints</b></p>
+[%dt.constraints DosageDetails%]
+[%tx DosageDetails%]
+</div>
+
+<a name="safety"></a>
+<h2 style="margin-bottom: 1px">
+DosageSafety
+</h2>
+
+[%dt DosageSafety 3%]
+
+
+<div class="use">
+<p><b>Constraints</b></p>
+[%dt.constraints DosageSafety%]
+[%tx DosageSafety%]
+</div>
+
 [%file newfooter%]
 
 <script src="assets/js/jquery.js"> </script>
