--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -1750,6 +1750,10 @@ Methods to express the "event" or "context" that is reference point for time rel
 </p>
 <p>The method to express a natural language description of the RelativeTime value is to use the text element.</p>
 
+<p>
+RelativeTime is used in the following places: [%dtusage RelativeTime%]
+</p>
+
 <a name="Signature"></a>
 <a name="signature"></a>
 <h2 style="margin-bottom: 1px">Signature</h2>
