--- a/source/datatypes-definitions.html
+++ b/source/datatypes-definitions.html
@@ -201,12 +201,11 @@
 
 <%dictionary Timing%>
 
-
 <a name="RelativeTime"></a>
 <a name="relativetime"></a>
 <h3 style="margin-bottom: 1px">RelativeTime</h3>
 <p style="background-color: gainsboro; border-left: solid 1px #808080; border-right: solid 1px #808080; border-bottom: solid 1px #808080; padding: 4px; margin-top: 0px">
-<!--xlp:Timing-->See also <a data-no-external="true" href="datatypes.html#RelativeTime">Base Definition</a>, <a data-no-external="true" href="datatypes-examples.html#RelativeTime">Examples</a>, <a data-no-external="true" href="datatypes-mappings.html#RelativeTime">Mappings</a>, <a data-no-external="true" href="datatypes-profiles.html#RelativeTime">Profiles</a> and <a data-no-external="true" href="[%extensions-location%]extensions-datatypes.html#RelativeTime">Extensions</a>
+<!--xlp:RelativeTime-->See also <a data-no-external="true" href="datatypes.html#RelativeTime">Base Definition</a>, <a data-no-external="true" href="datatypes-examples.html#RelativeTime">Examples</a>, <a data-no-external="true" href="datatypes-mappings.html#RelativeTime">Mappings</a>, <a data-no-external="true" href="datatypes-profiles.html#RelativeTime">Profiles</a> and <a data-no-external="true" href="[%extensions-location%]extensions-datatypes.html#RelativeTime">Extensions</a>
 </p>
 
 <%dictionary RelativeTime%>
