--- a/source/dosage-definitions.html
+++ b/source/dosage-definitions.html
@@ -12,6 +12,16 @@
 
 
 
+<%dtxheader definitions DosageDetails%>
+<h2>DosageDetails Detailed Descriptions</h2>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
+
+<a name="def"></a>
+<h3 style="margin-bottom: 1px">DosageDetails</h3>
+
+<%dictionary DosageDetails%>
+
+
 <%dtxheader definitions Dosage%>
 <h2>Dosage Detailed Descriptions</h2>
 <table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
@@ -20,6 +30,26 @@
 <h3 style="margin-bottom: 1px">Dosage</h3>
 
 <%dictionary Dosage%>
+
+
+<%dtxheader definitions DosageSafety%>
+<h2>DosageSafety Detailed Descriptions</h2>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
+
+<a name="def"></a>
+<h3 style="margin-bottom: 1px">DosageSafety</h3>
+
+<%dictionary DosageSafety%>
+
+
+<%dtxheader definitions DosageCondition%>
+<h2>Dosage Detailed Descriptions</h2>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
+
+<a name="def"></a>
+<h3 style="margin-bottom: 1px">DosageCondition</h3>
+
+<%dictionary DosageCondition%>
 
 [%file newfooter%]
 </body>
