fix missing style

--- a/source/dosage-examples.html
+++ b/source/dosage-examples.html
@@ -156,7 +156,7 @@ Methylphenidate 10&nbsp;mg tablets — 10&nbsp;mg at 07:30 and 12:00, 5&nbsp;mg 
 
  <div id="tabs-Example2-struc" class="ui-tabs-panel ui-corner-bottom ui-widget-content">
   <p><b>Structure</b></p>
-  <ul>
+  <ul class="ex-struct">
     <li>Model as multiple <code>dosageInstruction</code> entries (by dayOfWeek/timeOfDay) + one PRN entry.</li>
     <li><code>Dosage.timing.repeat.dayOfWeek</code> and <code>…timeOfDay</code> for fixed administrations.</li>
     <li><code>Dosage.asNeededBoolean</code> for PRN (evening); optionally <code>…when = EVE</code>.</li>
